[tool.poetry]
name = "securityfastapi"
version = "0.1.0"
description = ""
authors = ["thoth2357"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
pydantic = {extras = ["email"], version = "^2.6.4"}
databases = {extras = ["sqlite"], version = "^0.9.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.34"
python-jose = "^3.3.0"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
emails = "^0.6"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
